--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Create.cshtml
@@ -10,56 +10,47 @@
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Create" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <label>Title Aze</label>
-                            <input type="text" asp-for="TittleAz" id="f-name" class="form-control">
+                            <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title Aze">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <label>Title Eng</label>
-                            <input asp-for="TittleEn" id="f-name" class="form-control">
+                            <input type="text" asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title Eng">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <label>Title Ru</label>
-                            <input asp-for="TittleRu" id="f-name" class="form-control">
+                            <input asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title Ru">
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <label>Content Aze</label>
-                            <textarea asp-for="ContentAz" class="form-control " id="ccomment"></textarea>
+                            <textarea asp-for="ContentAz" class="form-control " id="ccomment" required="" placeholder="Content Aze"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <label>Content Eng</label>
-                            <textarea asp-for="ContentEn" class="form-control " id="ccomment"></textarea>
+                            <textarea asp-for="ContentEn" class="form-control " id="ccomment" required="" placeholder="Content Eng"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <label>Content Ru</label>
-                            <textarea asp-for="ContentRu" class="form-control " id="ccomment"></textarea>
+                            <textarea asp-for="ContentRu" class="form-control " id="ccomment" required="" placeholder="Content Ru"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <label>Address</label>
-                            <input type="text" asp-for="Address" id="f-name" class="form-control">
+                            <input type="text" asp-for="Address" id="f-name" class="form-control" placeholder="Address">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <label>Phone Number</label>
-                            <input type="text" asp-for="PhoneNumber" id="f-name" class="form-control">
+                            <input type="text" asp-for="PhoneNumber" id="f-name" class="form-control" placeholder="Phone Number">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <label>Email</label>
-                            <input type="text" asp-for="Email" id="f-name" class="form-control">
+                            <input type="text" asp-for="Email" id="f-name" class="form-control" placeholder="Email">
                         </div>
                     </div>
                     <div class="form-group">
