--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
@@ -13,7 +13,7 @@
                             <div class="form-group">
 
                                 <div class="col-lg-10">
-                                    <input asp-for="TittleAz" id="f-name" class="form-control">
+                                    <input placeholder="TittleAz" asp-for="TittleAz" id="f-name" class="form-control">
                                 </div>
                             </div>
                             <div class="form-group">
