--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
@@ -7,7 +7,7 @@
                 Create Contact Elements
             </header>
             <div class="panel-body">
-                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Create" method="post" enctype="multipart/form-data">
+                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Add" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <div class="col-lg-10">
                             <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title Aze">
@@ -45,12 +45,12 @@
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="PhoneNumber" id="f-name" class="form-control" placeholder="Phone Number">
+                            <input type="number" asp-for="PhoneNumber" id="f-name" class="form-control" placeholder="Phone Number">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="Email" id="f-name" class="form-control" placeholder="Email">
+                            <input type="email" asp-for="Email" id="f-name" class="form-control" placeholder="Email">
                         </div>
                     </div>
                     <div class="form-group">
