--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -168,30 +168,11 @@
         <section id="contact" class="wprt-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
-                        <h2 class="text-center margin-bottom-20">CONTACT US</h2>
-                        <div class="wprt-lines style-2 custom-1">
-                            <div class="line-1"></div>
-                        </div>
-                        <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
-                        <p class="wprt-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet iaculis elit. Nam semper ut arcu non placerat. Praesent nibh massa varius.</p>
-                        <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>
-                    </div>
+                    @await Component.InvokeAsync("Contact")
                     <!-- /.col-md-12 -->
 
-                    <div class="col-md-4">
-                        <h5>Address</h5>
-                        <p>68 Havemeyer St, Brooklyn, NY 11211<br> United States</p>
-                        <div class="wprt-spacer" data-desktop="15" data-mobi="0" data-smobi="0"></div>
-                        <h5>Phone number</h5>
-                        <p>+1 718-955-2838 or +1 718-955-3290</p>
-                        <div class="wprt-spacer" data-desktop="15" data-mobi="0" data-smobi="0"></div>
-                        <h5>E-mail address</h5>
-                        <p>contact@construction.com</p>
-                        <div class="wprt-spacer" data-desktop="0" data-mobi="10" data-smobi="10"></div>
-                    </div>
-                    <!-- /.col-md-4 -->
+                    
+                    <!-- contact /.col-md-4 -->
 
                     <div class="col-md-8">
                         <form class="wprt-contact-form" method="post" action="./includes/contact/contact-process.php">
