--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @addTagHelper ConstructionSite.TagHelpers.*,ConstructionSite
 @using ConstructionSite.DTO.FrontViewModels.About
 @using ConstructionSite.DTO.FrontViewModels.Portfoli
+@using ConstructionSite.DTO.FrontViewModels.Contact
 @using ConstructionSite.DTO.FrontViewModels.Service
 @using ConstructionSite.DTO.FrontViewModels.Testimonial 
 @using ConstructionSite.Entity.Models
