--- a/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
@@ -56,7 +56,7 @@
                                             </ul>
                                         </div>
                                         <div class="service-item-wrap">
-                                            <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Renovation">@item.Name</a></h3>
+                                            <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Index" asp-route-id="@item.Id">@item.Name</a></h3>
                                             <p class="desc" text="@item.Tittle"></p>
                                         </div>
                                     </div>
