--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
@@ -1,7 +1,11 @@
 ﻿@model AboutAddViewModel
+
 @{
     ViewData["Title"] = "Add";
 }
+
+<div class="text-danger" asp-validation-summary="All"></div>
+
         <div class="row">
             <div class="col-lg-12">
                 <section class="panel">
