--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
@@ -1,7 +1,10 @@
 ﻿@model AboutUpdateViewModel
+
 @{
     ViewData["Title"] = "Update";
 }
+
+<div class="text-danger" asp-validation-summary="All"></div>
 
 <div class="row">
     <div class="col-lg-12">
