Account ucun error div-lerini daxil etdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
@@ -1,4 +1,7 @@
 ﻿@model UserViewModel
+
+<div class="text-danger" asp-validation-summary="All"></div>
+
 <!--main content start-->
 <section id="main-content">
     <section class="wrapper">
