Blogda error div-lerini daxil etdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Index";
 }
 
+<div class="text-danger" asp-validation-summary="All"></div>
+
 <style type="text/css">
     .button-create {
         margin-bottom: 10px;
