Contact ve descriptiondaki error divini daxil etdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
@@ -6,6 +6,8 @@
     }
 </style>
 
+<div class="text-danger" asp-validation-summary="All"></div>
+
 <section class="panel">
     <header class="panel-heading">
         Contact - Table
