--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Add.cshtml
@@ -1,7 +1,6 @@
 ﻿@model DescriptionAddViewModel
-@*@{
-        ViewData["Title"] = "Add";
-    }*@
+
+<div class="text-danger" asp-validation-summary="All"></div>
 
 <div class="row">
     <div class="col-lg-12">
