--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
@@ -1,5 +1,7 @@
 ﻿@model ContactAddViewModel
 
+<div class="text-danger" asp-validation-summary="All"></div>
+
 <div class="row">
     <div class="col-lg-12">
         <section class="panel">
