--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Add.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Add";
 }
 
+<div class="text-danger" asp-validation-summary="All"></div>
+
 <section id="main-content">
     <div class="wrapper">
         <div class="row">
