--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Index.cshtml
@@ -3,11 +3,13 @@
     ViewData["Title"] = "Index";
 }
 
-    <style type="text/css">
-        .button-create {
-            margin-bottom: 10px;
-        }
-    </style>
+<style type="text/css">
+    .button-create {
+        margin-bottom: 10px;
+    }
+</style>
+
+<div class="text-danger" asp-validation-summary="All"></div>
 
 <section class="panel">
     <header class="panel-heading">
