--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Index";
 }
 
+    <div class="text-danger" asp-validation-summary="All"></div>
+
     <section class="panel">
         <header class="panel-heading">
             Project Table
