--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
@@ -9,6 +9,8 @@
     }
 </style>
 
+<div class="text-danger" asp-validation-summary="All"></div>
+
 <section class="panel">
     <header class="panel-heading">
         Service Table
