SubService ucun error divlerini daxil etdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
@@ -2,13 +2,14 @@
 @{
     ViewData["Title"] = "Index";
 }
-    <div asp-validation-summary="All">
-    </div>
-    <style type="text/css">
-        .button-create {
-            margin-bottom: 10px;
-        }
-    </style>
+
+<style type="text/css">
+    .button-create {
+        margin-bottom: 10px;
+    }
+</style>
+
+<div class="text-danger" asp-validation-summary="All"></div>
 
     <section class="panel">
         <header class="panel-heading">
