--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
@@ -2,8 +2,9 @@
 @{
     ViewData["Title"] = "Add";
 }
-<div asp-validation-summary="All">
-</div>
+
+<div class="text-danger" asp-validation-summary="All"></div>
+
 <section id="main-content">
     <div class="wrapper">
         <div class="row">
