--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Update.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Update";
 }
 
+    <div class="text-danger" asp-validation-summary="All"></div>
+
 <div class="row">
     <div class="col-lg-12">
         <section class="panel">
