--- a/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
@@ -23,9 +23,9 @@
 
                                     <div class="thumb"><img width="300" height="370" src="@item.Image" alt="image" /></div>
                                     <div class="service-item-wrap">
-                                        <h3 class="title font-size-18"><a href="#">@item.Tittle</a></h3>
+                                        <h3 class="title font-size-18"><a asp-controller="Blog" asp-action="Detalye" asp-route-id="@item.Id">@item.Tittle</a></h3>
                                         <p blogtext="@item.Content"></p>
-                                        <a asp-controller="Blog" asp-action="Inner" class="wprt-button small rounded-3px">READ MORE</a>
+                                        <a asp-controller="Blog" asp-action="Detalye" asp-route-id="@item.Id" class="wprt-button small rounded-3px">READ MORE</a>
                                     </div>
 
 
