--- a/ConstructionSite/Views/Services/Index.cshtml
+++ b/ConstructionSite/Views/Services/Index.cshtml
@@ -1,66 +1,7 @@
-﻿@model IEnumerable<ServiceViewModel>
-<div id="featured-title" class="clearfix featured-title-left">
-    <div id="featured-title-inner" class="container clearfix">
-        <div class="featured-title-inner-wrap">
-            <div class="featured-title-heading-wrap">
-                <h1 class="featured-title-heading">Our Services</h1>
-            </div>
-        </div>
-    </div>
-</div>
+﻿
+@{
+    ViewData["Title"] = "Index";
+}
 
-<!-- Main Content -->
-<div id="main-content" class="site-main clearfix">
-    <div id="content-wrap">
-        <div id="site-content" class="site-content clearfix">
-            <div id="<inner-content></inner-content>" class="inner-content-wrap">
-                <div class="page-content">
-                    <section class="wprt-section">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="wprt-spacer" data-desktop="110" data-mobi="30" data-smobi="30"></div>
-                                </div>
-                                <!-- /.col-md-12 -->
-                                @foreach (ServiceViewModel  item in Model)
-	                             {
-                                    <div class="col-md-4">
-                                    @*<div class="service-item clearfix">
-                                        <div class="thumb"><img src=@item.image" alt="image" /></div>
-                                        <div class="service-item-wrap">
-                                            <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Construction">@item.NameAz</a></h3>
-                                            <p>@item.TittleAz</p>
-                                            <a asp-controller="Services" asp-action="Construction" class="wprt-button small rounded-3px">READ MORE</a>
-                                        </div>
-                                    </div>*@
-                                    <div class="wprt-spacer" data-desktop="60" data-mobi="30" data-smobi="30"></div>
-                                    <div class="service-item clearfix">
-                                        <div class="thumb"><img width="350" height="223" src="@item.image" alt="image" /></div>
-                                        <div class="service-item-wrap">
-                                            <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Renovation">@item.Name</a></h3>
-                                            <p>@item.Tittle</p>
-                                            <a asp-controller="Services" asp-action="Renovation" class="wprt-button small rounded-3px">READ MORE</a>
-                                        </div>
-                                    </div>
-                                    <div class="wprt-spacer" data-desktop="0" data-mobi="30" data-smobi="30"></div>
-                                </div>
+<h2>Index</h2>
 
-                                }
-
-                                <div class="col-md-12">
-                                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
-                                </div>
-                                <!-- /.col-md-12 -->
-
-                            </div>
-                            <!-- /.row -->
-
-                        </div>
-                        <!-- /.container -->
-
-                    </section>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
