--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -164,11 +164,11 @@
 
         </div>
         <!-- /.container -->
-        @(await Component.InvokeAsync("Blog"))
+        @*@(await Component.InvokeAsync("Blog"))*@
         <section id="contact" class="wprt-section">
             <div class="container">
                 <div class="row">
-                    @await Component.InvokeAsync("Contact")
+                    @*@await Component.InvokeAsync("Contact")*@
                     <!-- /.col-md-12 -->
 
                     
