--- a/ConstructionSite/Views/About/Index.cshtml
+++ b/ConstructionSite/Views/About/Index.cshtml
@@ -72,10 +72,12 @@
                                         </div>
                                         <div id="wprt-carousel" class="flexslider">
                                             <ul class="slides">
-                                                <li><img src="~/assets/img/gallery/1.jpg" alt="image"></li>
-                                                <li><img src="~/assets/img/gallery/2.jpg" alt="image"></li>
-                                                <li><img src="~/assets/img/gallery/1.jpg" alt="image"></li>
-                                                <li><img src="~/assets/img/gallery/2.jpg" alt="image"></li>
+                                                @*@foreach (Image item in ViewBag.image)
+                                                {
+                                                    <li><img src="@item.Path" alt="image"></li>
+                                                }*@
+
+                                               
                                             </ul>
                                         </div>
                                     </div>
