--- a/ConstructionSite/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Views/Blog/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- Featured Title -->
+﻿@model IEnumerable<ConstructionSite.DTO.AdminViewModels.News.NewsViewModel>
 <div id="featured-title" class="clearfix featured-title-left">
     <div id="featured-title-inner" class="container clearfix">
         <div class="featured-title-inner-wrap">
@@ -14,16 +14,20 @@
     <div id="content-wrap" class="container">
         <div id="site-content" class="site-content clearfix" style="width: 100%">
             <div id="inner-content" class="inner-content-wrap">
+                
+               @foreach (var item in Model)
+               {
+
                 <article class="hentry">
                     <div class="post-media clearfix">
-                        <a href="#"><img src="~/assets/img/news/1.jpg" alt="image"></a>
+                        <a href="#"><img src="@item.Imagepath" alt="image"></a>
                     </div>
                     <!-- /.post-media -->
 
                     <div class="post-content-wrap">
                         <h2 class="post-title">
                             <span class="post-title-inner">
-                                <a href="#">History of the Interstate Highway System</a>
+                                <a asp-controller="Blog" asp-action="Detalye" asp-route-id="@item.Id">@item.Title</a>
                             </span>
                         </h2>
                         <!-- /.post-title -->
@@ -32,7 +36,7 @@
                             <div class="post-meta-content">
                                 <div class="post-meta-content-inner">
                                     <span class="post-date item">
-                                        <span class="inner"><span class="entry-date">December 30, 2016</span></span>
+                                        <span class="inner"><span class="entry-date">@item.CreateDate</span></span>
                                     </span>
                                 </div>
                             </div>
@@ -40,13 +44,13 @@
                         <!-- /.post-meta -->
 
                         <div class="post-content post-excerpt">
-                            <p>Integer rhoncus hendrerit sem egestas porttitor. Integer et mi sed dolor eleifend pretium quis ut velit. Nam sit amet arcu feugiat, consequat orci at, ultrices magna. Aliquam vestibulum, eros vel venenatis vulputate, erat augue suscipit mi, nec rhoncus velit ipsum sed lorem. Nulla commodo leo eget justo blandit, non sagittis lectus dignissim.</p>
+                            <p>@item.Content.</p>
                         </div>
                         <!-- /.post-excerpt -->
 
                         <div class="post-read-more">
                             <div class="post-link">
-                                <a asp-controller="Blog" asp-action="Inner">Read More</a>
+                                <a asp-controller="Blog" asp-action="Detalye" asp-route-id="@item.Id">Read More</a>
                             </div>
                         </div>
                         <!-- /.post-read-more -->
@@ -55,88 +59,9 @@
                     <!-- /.post-content-wrap -->
 
                 </article>
-                <article class="hentry">
-                    <div class="post-media clearfix">
-                        <a href="#"><img src="~/assets/img/news/2.jpg" alt="image"></a>
-                    </div>
-                    <!-- /.post-media -->
 
-                    <div class="post-content-wrap">
-                        <h2 class="post-title">
-                            <span class="post-title-inner">
-                                <a href="#">Urban Development Projects in USA</a>
-                            </span>
-                        </h2>
-                        <!-- /.post-title -->
 
-                        <div class="post-meta style-3">
-                            <div class="post-meta-content">
-                                <div class="post-meta-content-inner">
-                                    <span class="post-date item">
-                                        <span class="inner"><span class="entry-date">December 30, 2016</span></span>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /.post-meta -->
-
-                        <div class="post-content post-excerpt">
-                            <p>Integer rhoncus hendrerit sem egestas porttitor. Integer et mi sed dolor eleifend pretium quis ut velit. Nam sit amet arcu feugiat, consequat orci at, ultrices magna. Aliquam vestibulum, eros vel venenatis vulputate, erat augue suscipit mi, nec rhoncus velit ipsum sed lorem. Nulla commodo leo eget justo blandit, non sagittis lectus dignissim.</p>
-                        </div>
-                        <!-- /.post-excerpt -->
-
-                        <div class="post-read-more">
-                            <div class="post-link">
-                                <a asp-controller="Blog" asp-action="Inner">Read More</a>
-                            </div>
-                        </div>
-                        <!-- /.post-read-more -->
-
-                    </div>
-                    <!-- /.post-content-wrap -->
-
-                </article>
-                <article class="hentry">
-                    <div class="post-media clearfix">
-                        <a href="#"><img src="~/assets/img/news/1.jpg" alt="image"></a>
-                    </div>
-                    <!-- /.post-media -->
-
-                    <div class="post-content-wrap">
-                        <h2 class="post-title">
-                            <span class="post-title-inner">
-                                <a href="#">Engineering of the Winner Towers</a>
-                            </span>
-                        </h2>
-                        <!-- /.post-title -->
-
-                        <div class="post-meta style-3">
-                            <div class="post-meta-content">
-                                <div class="post-meta-content-inner">
-                                    <span class="post-date item">
-                                        <span class="inner"><span class="entry-date">December 30, 2016</span></span>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /.post-meta -->
-
-                        <div class="post-content post-excerpt">
-                            <p>Integer rhoncus hendrerit sem egestas porttitor. Integer et mi sed dolor eleifend pretium quis ut velit. Nam sit amet arcu feugiat, consequat orci at, ultrices magna. Aliquam vestibulum, eros vel venenatis vulputate, erat augue suscipit mi, nec rhoncus velit ipsum sed lorem. Nulla commodo leo eget justo blandit, non sagittis lectus dignissim.</p>
-                        </div>
-                        <!-- /.post-excerpt -->
-
-                        <div class="post-read-more">
-                            <div class="post-link">
-                                <a asp-controller="Blog" asp-action="Inner">Read More</a>
-                            </div>
-                        </div>
-                        <!-- /.post-read-more -->
-
-                    </div>
-                    <!-- /.post-content-wrap -->
-
-                </article>
+               }
                 <div class="wprt-pagination clearfix">
                     <ul class="page-numbers">
                         <li><span class="page-numbers current">1</span></li>
