--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -28,195 +28,16 @@
             {
                 <div class="cbp-filter-item">
                     
-                    <a asp-controller="Project" asp-action="byid" asp-route-id="@item.Id"><span>@item.Name</span></a>
+                    <a asp-controller="Portfolio" asp-action="Project" asp-route-id="@item.Id"><span>@item.Name</span></a>
                 </div>
             }
 
-            @*<div data-filter=".architecture" class="cbp-filter-item">
-            <span>Architecture</span>
-        </div>*@
+         
 
         </div>
         <!-- /#project-filter -->
 
-        <div id="projects" class="cbp">
-            <div class="cbp-item architecture interior workspace">
-                <div class="project-item">
-                    <div class="inner">
-                        <div class="grid">
-                            <figure class="effect-zoe">
-                                <img src="~/assets/img/projects/1.jpg" alt="image" />
-                                <figcaption>
-                                    <div>
-                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
-                                        <p>Construction</p>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/1-full.jpg" data-title="LUXURY BUILDINGS">
-                            <i class="fa fa-arrows-alt"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!--/.cbp-item -->
-
-            <div class="cbp-item building office workspace">
-                <div class="project-item">
-                    <div class="inner">
-                        <div class="grid">
-                            <figure class="effect-honey">
-                                <img src="~/assets/img/projects/2.jpg" alt="image" />
-                                <figcaption>
-                                    <div>
-                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
-                                        <p>Construction</p>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/2-full.jpg" data-title="LUXURY BUILDINGS">
-                            <i class="fa fa-arrows-alt"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!--/.cbp-item -->
-
-            <div class="cbp-item architecture garden interior">
-                <div class="project-item">
-                    <div class="inner">
-                        <div class="grid">
-                            <figure class="effect-oscar">
-                                <img src="~/assets/img/projects/2.jpg" alt="image" />
-                                <figcaption>
-                                    <div>
-                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
-                                        <p>Construction</p>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/3-full.jpg" data-title="LUXURY BUILDINGS">
-                            <i class="fa fa-arrows-alt"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!--/.cbp-item -->
-
-            <div class="cbp-item building interior workspace">
-                <div class="project-item">
-                    <div class="inner">
-                        <div class="grid">
-                            <figure class="effect-sadie">
-                                <img src="~/assets/img/projects/1.jpg" alt="image" />
-                                <figcaption>
-                                    <div>
-                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
-                                        <p>Construction</p>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/4-full.jpg" data-title="LUXURY BUILDINGS">
-                            <i class="fa fa-arrows-alt"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!--/.cbp-item -->
-
-            <div class="cbp-item garden office workspace">
-                <div class="project-item">
-                    <div class="inner">
-                        <div class="grid">
-                            <figure class="effect-zoe">
-                                <img src="~/assets/img/projects/1.jpg" alt="image" />
-                                <figcaption>
-                                    <div>
-                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
-                                        <p>Construction</p>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/5-full.jpg" data-title="LUXURY BUILDINGS">
-                            <i class="fa fa-arrows-alt"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!--/.cbp-item -->
-
-            <div class="cbp-item architecture garden office">
-                <div class="project-item">
-                    <div class="inner">
-                        <div class="grid">
-                            <figure class="effect-honey">
-                                <img src="~/assets/img/projects/2.jpg" alt="image" />
-                                <figcaption>
-                                    <div>
-                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
-                                        <p>Construction</p>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/6-full.jpg" data-title="LUXURY BUILDINGS">
-                            <i class="fa fa-arrows-alt"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!--/.cbp-item -->
-
-            <div class="cbp-item architecture garden office">
-                <div class="project-item">
-                    <div class="inner">
-                        <div class="grid">
-                            <figure class="effect-oscar">
-                                <img src="~/assets/img/projects/1.jpg" alt="image" />
-                                <figcaption>
-                                    <div>
-                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
-                                        <p>Construction</p>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/7-full.jpg" data-title="LUXURY BUILDINGS">
-                            <i class="fa fa-arrows-alt"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!--/.cbp-item -->
-
-            <div class="cbp-item architecture garden office">
-                <div class="project-item">
-                    <div class="inner">
-                        <div class="grid">
-                            <figure class="effect-sadie">
-                                <img src="~/assets/img/projects/1.jpg" alt="image" />
-                                <figcaption>
-                                    <div>
-                                        <h2><a target="_blank" asp-controller="Portfolio" asp-action="Detail">LUXURY BUILDINGS</a></h2>
-                                        <p>Construction</p>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/8-full.jpg" data-title="LUXURY BUILDINGS">
-                            <i class="fa fa-arrows-alt"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!--/.cbp-item -->
-
-        </div>
+        
         <!-- /#projects -->
 
     </div>
