--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using ConstructionSite.DTO.FrontViewModels.Portfoli
 @using ConstructionSite.DTO.FrontViewModels.Contact
 @using ConstructionSite.DTO.FrontViewModels.Service
+@using ConstructionSite.DTO.FrontViewModels.Portfoli
 @using ConstructionSite.DTO.FrontViewModels.Testimonial 
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Models
