--- a/ConstructionSite/Views/About/Index.cshtml
+++ b/ConstructionSite/Views/About/Index.cshtml
@@ -54,7 +54,7 @@
                                             <ul class="slides">
                                                 <li class="flex-active-slide">
                                                     <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="@Model.imagePath" alt="image" />
+                                                    <img src="@Model.imagePath" alt="image" width="570" height="380"/>
                                                 </li>
                                                 @*<li class="flex-active-slide">
                                                     <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
