--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -18,6 +18,8 @@
     <!-- Theme Style -->
     <link rel="stylesheet" type="text/css" href="~/style.css">
 
+    @RenderSection("head", false)
+
     <!-- Favicon and touch icons  -->
     <link rel="shortcut icon" href="~/assets/icon/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="~/assets/icon/apple-touch-icon-158-precomposed.png" />
