--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -44,7 +44,7 @@
                             <td class=" ">@item.Content</td>
                             <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
                             <td class=" "><a class="edit btn btn-primary" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
-                            <td class=" "><a class="btn btn-danger delete delete-about" data-id="@item.Id">Delete</a></td>
+                            <td class=" "><a class="btn btn-danger delete delete-about"asp-area="ConstructionAdmin" asp-controller="About" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
                         </tr>
                         }
                     </tbody>
