--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -152,8 +152,9 @@
 
                     @await Component.InvokeAsync("About")
                     @*@await Component.InvokeAsync("Service")
-        @await Component.InvokeAsync("Portfolio")
-        @await Component.InvokeAsync("Testimonial")*@
+        @await Component.InvokeAsync("Portfolio")*@
+
+                    @await Component.InvokeAsync("Testimonial")
 
 
                 </div>
