--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
@@ -26,7 +26,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input asp-for="TittleRu" id="f-name" class="form-control" placeholder="Tittle Ru">
+                            <input asp-for="TittleRu" id="f-name" class="form-control" placeholder="Tittle RU">
                         </div>
                     </div>
                     <div class="form-group ">
@@ -40,19 +40,15 @@
                         </div>
                     </div>
                     <div class="form-group ">
-
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentRu" class="form-control " id="ccomment" required=""></textarea>
+                            <textarea asp-for="ContentRu" class="form-control " id="ccomment" required="" placeholder="Content RU"></textarea>
                         </div>
                     </div>
-
                     <div class="form-group">
-
                         <div class="col-lg-10">
                             <input type="file" name="FileData" placeholder="Images" id="f-name" class="form-control">
                         </div>
                     </div>
-
                     <div class="form-group">
                         <div class="col-lg-offset-2 col-lg-10">
                             <button class="btn btn-success" type="submit">Submit</button>
