--- a/ConstructionSite/Views/Services/Renovation.cshtml
+++ b/ConstructionSite/Views/Services/Renovation.cshtml
@@ -1,4 +1,5 @@
-﻿<!-- Featured Title -->
+﻿@model IEnumerable<ServiceSubServiceImage>
+ 
 <div id="featured-title" class="clearfix featured-title-left">
     <div id="featured-title-inner" class="container clearfix">
         <div class="featured-title-inner-wrap">
@@ -24,7 +25,7 @@
                             <div class="line-2"></div>
                         </div>
                         <div class="wprt-spacer" data-desktop="25" data-mobi="25" data-smobi="25"></div>
-                        <p class="margin-bottom-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec erat erat. Integer blandit nulla quis fermentum hendrerit. Vestibulum eu libero volutpat, portas quam acc, tempus sem. Donec sodales quam id lorem lobortis, vitae interdum nisl vehicula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam suscipit, elit quis facilisis dictum, diam justo volutpat dui. Cras id justo eget sapien scelerisque lacinia non a eros.</p>
+                        <p class="margin-bottom-0">.</p>
                         <div class="wprt-spacer" data-desktop="35" data-mobi="35" data-smobi="35"></div>
                         <div class="wprt-toggle style-1">
                             <h3 class="toggle-title">We use technology to do the job more quickly</h3>
