--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -148,10 +148,11 @@
         <div id="site-content" class="site-content clearfix">
             <div id="inner-content" class="inner-content-wrap">
                 <div class="page-content">
-                  
-                  
-        @*@await Component.InvokeAsync("About")
-        @await Component.InvokeAsync("Service")
+
+                    @await Component.InvokeAsync("Service")
+
+                    @*@await Component.InvokeAsync("About")
+        await Component.InvokeAsync("Service")
         @await Component.InvokeAsync("Portfolio")
         @await Component.InvokeAsync("Testimonial")*@
 
@@ -164,7 +165,7 @@
 
         </div>
         <!-- /.container -->
-        @*@(await Component.InvokeAsync("Blog"))*@
+       @(await Component.InvokeAsync("Blog"))
         <section id="contact" class="wprt-section">
             <div class="container">
                 <div class="row">
