--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
@@ -15,40 +15,40 @@
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Create" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="TittleAz" id="f-name" class="form-control">
+                            <input type="text" asp-for="TittleAz" id="f-name" class="form-control" placeholder="Title AZE">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input asp-for="TittleRu" id="f-name" class="form-control">
+                            <input asp-for="TittleEn" id="f-name" class="form-control" placeholder="Title ENG">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input asp-for="TittleEn" id="f-name" class="form-control">
+                            <input asp-for="TittleRu" id="f-name" class="form-control" placeholder="Title RU">
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentAz" class="form-control " id="ccomment" required=""></textarea>
+                            <textarea asp-for="ContentAz" class="form-control " id="ccomment" required="" placeholder="Content AZE"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentRu" class="form-control " id="ccomment" required=""></textarea>
+                            <textarea asp-for="ContentEn" class="form-control " id="ccomment" required="" placeholder="Content EN"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentEn" class="form-control " id="ccomment" required=""></textarea>
+                            <textarea asp-for="ContentRu" class="form-control " id="ccomment" required="" placeholder="Content RU"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="file" name="file" id="f-name" class="form-control">
+                            <input type="file" name="file" id="f-name" class="form-control" placeholder="Images>
                         </div>
                     </div>
-                   
+
                     <div class="form-group">
                         <div class="col-lg-offset-2 col-lg-10">
                             <button class="btn btn-danger" type="submit">Save</button>
